[package]
name                 = "mono_axis_gui"
description          = "MonoAxis GUI user interface"
version.workspace    = true
authors.workspace    = true
repository.workspace = true
edition.workspace    = true
readme.workspace     = true
license.workspace    = true

[dependencies]
iced = {version = "0.13.1", features = ["canvas", "image", "svg", "debug"]}
iced_style = "0.12.1"
mono_axis = { path = ".." }


